--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "gulp server"
   },
   "author": "Leonardo Koslowski",
   "license": "ISC",
